# Stock-Management-System

./: CMakeLists.txt  Justfile  autopush.sh  main.cpp  readme.md
include/: AdminMenu.hpp  Auth.hpp  BuyProduct.hpp  ClearScreen.hpp  Color.hpp  CustomerMenu.hpp  Logout.hpp  PasswordUtils.hpp  PressEnter.hpp  SearchProduct.hpp  SortFilter.hpp  StockManager.hpp  StringUtils.hpp  User.hpp  ViewProduct.hpp
src/: AdminMenu.cpp  Auth.cpp  BuyProduct.cpp  ClearScreen.cpp  CustomerMenu.cpp  Logout.cpp  PasswordUtils.cpp  PressEnter.cpp  SearchProduct.cpp  SortFilter.cpp  StockManager.cpp  User.cpp  ViewProduct.cpp
